ob image and icon added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Kalkulator walut</title>
     <link href="css/style.css" rel="stylesheet">
     </link>
+    <link rel="icon" href="images/icon.png">
+    <meta property="og:image" content="images/share.jpg">
     <script defer src="js/script.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -19,7 +21,8 @@
         <h1 class="header">Kantor</h1>
         <fieldset>
             <label>
-                <h2>Twoja wpłata w PLN:</h2><input required type="number" min="1" placeholder="Wpisz kwotę" class="amound js-amount">
+                <h2>Twoja wpłata w PLN:</h2><input required type="number" min="1" placeholder="Wpisz kwotę"
+                    class="amound js-amount">
             </label>
             <label>
                 <h2>Wybrana waluta:</h2>
