Button name changed (calculate)

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </label>
         </fieldset>
         <div class="button">
-            <button class="button__submit js-submit">Oblicz</button>
+            <button class="button__submit js-submit">Calculate</button>
             <button type="reset" class="button__reset js-reset">Reset</button>
         </div>
         <h3 class="result"><strong>Wynik: </strong><strong class="js-result"></strong></h3>
