--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body class="body">
     <form class="form js-form">
-        <h1 class="header">Kantor</h1>
+        <h1 class="form__header">Kantor</h1>
         <fieldset>
             <label>
                 <h2>Twoja wpłata w PLN:</h2><input required type="number" min="1" placeholder="Wpisz kwotę"
